fix: Change #root overflow to visible to allow dropdown to display

--- a/web/src/styles/globals.css
+++ b/web/src/styles/globals.css
@@ -31,10 +31,16 @@
   box-sizing: border-box;
 }
 
-html, body, #root {
+html, body {
   height: 100%;
   width: 100%;
   overflow: hidden;
+}
+
+#root {
+  height: 100%;
+  width: 100%;
+  overflow: visible;
 }
 
 body {
